updated the index,html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
   </head>
   <body>
+  <div class="containerRules">
+   <button class="btn btn-warning"><a href="/rules.html">How to play?</a></button>
+  </div>
    <div class="container-5">
 
-    <h2>Challenge-5: Blackjack</h2>
+    <h2>Blackjack</h2>
     <h3><span id="blackjack-result">Let's play!!</span></h3>
 
     <div class="flex-blackjack-row-1">
@@ -84,7 +87,11 @@
   </div>
 
 
+<div class="containerRules">
 
+<h4><i>Made By : Avadhoot Prakash Autade</i></h4>
+
+</div>
 
 
 
