changed the path of rules.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
   <div class="containerRules">
-   <button class="btn btn-warning"><a href="/rules.html">How to play?</a></button>
+   <button class="btn btn-warning"><a href="/Black-Jack/rules.html">How to play?</a></button>
   </div>
    <div class="container-5">
 
